kubernetes/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: geoedf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoedf
  template:
    metadata:
      labels:
        app: geoedf
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: NotIn
                values:
                - master
      containers:
        - name: worker
          image: rkalyana/idata-worker
          command: ["/app/entrypoint.sh"]
          volumeMounts:
            - mountPath: /srv/idata
              name: idata
      volumes:
        - name: idata
          persistentVolumeClaim:
            claimName: worker-pv-claim
