kubernetes/qgis-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "js-170-52.jetstream-cloud.org"
      http:
        paths:
          - backend:
              serviceName: qgis-server
              servicePort: 80
            path: /
